# quorum-language

./: .gitignore  License.txt  README.md  WordFrequency.quorum  q
AccessibilityNative/MacAccessibleHandler/: AccessibleHandlers_MacAccessibleHandler.h  MacAccessibleHandler.h  headers.h  (+3 more)
Plugins/AccessibilityPlugin/Native/Windows/src/: AccessibilityManagerWindows.cpp  ButtonControl.cpp  ButtonControl.h  ButtonGroupControl.cpp  ButtonGroupControl.h  ButtonGroupProvider.cpp  ButtonGroupProvider.h  ButtonProvider.cpp  ButtonProvider.h  CMakeLists.txt  CellControl.cpp  CellControl.h  CellProvider.cpp  CellProvider.h  CheckBoxControl.cpp  CheckBoxControl.h  CheckBoxProvider.cpp  CheckBoxProvider.h  ControlT.h  ControlTImpl.h  CustomMessages.h  DialogControl.cpp  DialogControl.h  DialogProvider.cpp  DialogProvider.h  Item.cpp  Item.h  ItemControl.cpp  ItemControl.h  ItemProvider.cpp  ItemProvider.h  ListControl.cpp  ListControl.h  ListItemControl.cpp  ListItemControl.h  ListItemProvider.cpp  ListItemProvider.h  ListProvider.cpp  ListProvider.h  Menu.cpp  (+83 more)
Plugins/AccessibilityPlugin/Native/Windows/src/Header/: plugins_quorum_Libraries_Interface_AccessibilityManager.h
Quorum/: .gitignore  Dockerfile.quorum.build  ReadMe.txt  bootstrap.bat  bootstrap.sh  build.bat  build_image.sh  build_local_image.sh  clean.bat  cpu_profile.sh  cpu_profile_snapshot.sh  library.bat  memory_profile.sh
Quorum3/: .gitignore  ReadMe.txt  bootstrap.bat  bootstrap.sh  build.sh  document.sh
QuorumCBCWrapper/: build.xml
QuorumTomcat/: build.xml
QuorumWeb/: build.xml
TestCaseWriter/: ChainingTests.txt  ImpTests.txt  ReturnTests.txt  TemplatingTests.txt
WordCountAlgo/: .gitignore  Main.quorum  WordFrequency.quorum  input0.txt  stopwords-en.txt  wizard_of_oz.txt
quorum/: EverythingObserverTest.quorum  FocusObserverTest.quorum  KeyboardObserverTest.quorum  Main.quorum  Main.quorum.r28  Matt.quorum  Melissa.quorum  MenuObserverTest.quorum  MouseObserverTest.quorum  Nicole.quorum  Observer.quorum  PropertyObserverTest.quorum  Returner.quorum  Stefik.quorum  StefikGrand.quorum  StefikParent.quorum  Test.quorum  WindowObserverTest.quorum  build.xml  fObserver.quorum  kObserver.quorum  wObserver.quorum
(+4530 files in other folders)
